[tool.poetry]
name = "copart"
version = "0.1.0"
description = ""
authors = ["Igor-Mozharov <r5@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.18.1"
undetected-chromedriver = "^3.5.5"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
